# pm3

./: Cargo.toml  LICENSE  README.md  flake.nix  pm3.toml  prd.md
.claude/skills/pm3/: SKILL.md
.github/workflows/: ci.yml
.helix/: languages.toml
docs/: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  waku.config.ts
docs/content/docs/: claude-code.mdx  cli.mdx  comparison.mdx  index.mdx  logging.mdx  meta.json  process-lifecycle.mdx  quick-start.mdx  tui.mdx
docs/content/docs/configuration/: cluster-mode.mdx  cron-restarts.mdx  environments.mdx  file-watching.mdx  health-checks.mdx  index.mdx  memory-limits.mdx  meta.json  process-options.mdx
docs/content/docs/guides/: auto-restart.mdx  ci-cd.mdx  full-stack-app.mdx  meta.json  system-boot.mdx
docs/scripts/: generate-og.tsx
docs/src/components/: asciinema-player.tsx  config-builder.tsx  copy-button.tsx  install-command.tsx
docs/src/lib/: layout.shared.tsx  source.ts
docs/src/pages/: _root.tsx
docs/src/pages/(home)/: config-builder.tsx  index.tsx
docs/src/pages/docs/: [...slugs].tsx
docs/src/styles/: globals.css
src/: cli.rs  client.rs  config.rs  cron.rs  daemon.rs  deps.rs  env_file.rs  health.rs  init.rs  lib.rs  log.rs  main.rs  manager.rs  memory.rs  paths.rs  pid.rs  process.rs  protocol.rs  startup.rs  sys.rs  tui.rs  watch.rs
tests/: daemon.rs  e2e.rs
