[package]
name = "pm3"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
comfy-table = "7"
dirs = "6"
nix = { version = "0.30", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
shell-words = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
