[package]
name = "pm3"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"
color-eyre = "0.6"
comfy-table = "7"
crossterm = "0.27"
dirs = "6"
owo-colors = "4"
ratatui = { version = "0.26", features = ["crossterm"] }
nix = { version = "0.30", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
shell-words = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
reqwest = "0.13.1"
notify = "7"
cron = "0.15.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
regex = "1"
serde_json = "1"
tempfile = "3"
